--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#e0cfbc</color>
-    <color name="colorPrimaryDark">#fdfdfd</color>
+    <color name="colorPrimaryDark"></color>
     <color name="colorAccent">#e0cfbc</color>
 </resources>
